
This file shows the changes in recent releases of TinyMCE for MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

TinyMCE 3.2.7.0 ($LastChangedRevision: 581 $, $LastChangedDate: 2009-11-06 08:20:21 -0600 (Fri, 06 Nov 2009) $)
====================================
- Fixed bug with toggle not found in SVN
- Fixed various bugs
- Fixed bug with css style selectors
- Changed integrations to work in Revo-beta5.
- Added hook for OnRichTextBrowserInit to allow for proper integrations into MODx.Browser
- Added hook for OnBeforeManagerPageInit to properly register TinyMCE JS and Ext-derived object before page load; this allows using the 'tinymce' xtype in ExtJS forms

====================================
Version 3.2.0.1 (2008-09-17)
	Fixed bug where font sizes and faces wouldn't be changed correctly when there was a parent with a different style.
	Fixed bug where adding fonts to the same selection would produce redundant spans.
Version 3.2 (2008-09-11)
	Added new text style support, it will now use span elements internally instead of font elements.
	Added new improved support for the theme_advanced_font_sizes option, check the Wiki for details.
	Added new keep_style setting that maintains the text style on return/enter on non IE browsers, enabled by default.
	Added new onBeforeSetContent/onBeforeGetContent/onSetContent/onGetContent events to the Selection class.
	Added new selectByIndex method to ListBox class. This enables you to select list items by an index instead of a value.
	Added new possibility to the select method of the ListBox class. This can now have a selector function as it's value argument.
	Added new possibility to skip the loading of popups css by setting the feature popup_css to the value false.
	Added new possibility to skip translation of popups by setting the translate_i18n feature to false.